[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
serde = "1.0"
serde_derive = "1.0.144"
toml = "0.5.9"
directories = "4.0.1"
clap = {version = "3.2.22", features = ["derive", "color"]}

